tests/cases/smoke/invalid/invalid_const_name.dp
const max_users = 100
